--- a/GalaxyQuest/Views/Planets/Index.cshtml
+++ b/GalaxyQuest/Views/Planets/Index.cshtml
@@ -2,7 +2,23 @@
 
 <h2>Far Far Away Galaxy Planets</h2>
 
-The planets of the star wars galaxy should be here!
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Population</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var planet in ViewBag.SWPlanets)
+        {
+            <tr>
+                <td>@planet.Name</td>
+                <td>@planet.Population</td>
+            </tr>
+        }
+    </tbody>
+</table>
 
 <h2>Milky Way Planets</h2>
 
